fix: allow container to scroll by removing overflow clip

--- a/app/src/scss/index.scss
+++ b/app/src/scss/index.scss
@@ -27,6 +27,7 @@ body {
 #mediasoup-demo-app-container {
 	height: 100%;
 	width: 100%;
+	overflow-y: auto;
 }
 
 /* Premium Scrollbar */
